# k8stest

./: Makefile  deployment.yaml  pyproject.toml
flask-app/: Dockerfile  Makefile  main.py  pyproject.toml
flask-app/k8s/: deploy.yaml
flask-app/src/: Dockerfile
k8s-resources/: consumer.yaml  flask-app.yaml  producer.yaml  rabbitmq.yaml  redis.yaml
rabbit-consumer/: Dockerfile  main.py  pyproject.toml
rabbit-consumer/src/: Dockerfile  requirements.txt
rabbit-producer/: Dockerfile  main.py  pyproject.toml
rabbitmq/: Makefile
rabbitmq/k8s/: deploy.yaml
redis/: Makefile
