[project]
name = "sample-k8s-deployment"
version = "0.1.0"
description = ""
authors = [
    {name = "Tony Kolstee",email = "tony@kolstee.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "redis (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
